# diy

./: CMakeLists.txt
cmake/: .FindDiy.cmake.swp  FindDiy.cmake
examples/decomposition/: CMakeLists.txt
examples/io/: CMakeLists.txt
examples/mpi/: CMakeLists.txt
examples/reduce/: CMakeLists.txt  merge-reduce.cpp
examples/serialization/: CMakeLists.txt
examples/simple/: CMakeLists.txt  iexchange.cpp  rexchange.cpp
include/diy/: master.hpp  pick.hpp  proxy.hpp
include/diy/iexchange/: master.hpp  proxy.hpp
include/diy/mpi/rexchange/: communicator.hpp  point-to-point.hpp
include/diy/rexchange/: .master.hpp.swp  .master.hpp.un~  master.hpp  mpi.hpp
tests/: CMakeLists.txt
tests/scripts/: CMakeLists.txt
